--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "server": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
     "start ": "nodemon server.js",
     "client": "npm start --prefix frontend",
@@ -14,6 +13,7 @@
   "author": "chana96",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
