--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.21.5",
     "nodemon": "^1.19.4"
   }
 }
