--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "chana96",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1"
   },
