--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
-    "express": "^4.17.1"
+    "config": "^3.3.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.11.4"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
